# Qna-system-for-technical-documentation

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: classifier.py
models/utils/: data.py  model_bert.py
models/weights/: catboost_model.cbm
notebooks/: bert.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
parser/: READMW.md
parser/rustore/extractors/: __init__.py
parser/rustore/extractors/html/: __init__.py  content.py  images.py  links.py
parser/rustore/fields/: __init__.py  list.py  single.py
parser/rustore/parsers/: base.py  html.py
parser/rustore/utils/: selectors.py  url.py  validators.py
scfo/: docker-compose.yml
scfo/pybackend/: Dockerfile  bot.py  main.py  requirements.txt
scfo/pybackend/doc/: doc.txt  documentation.markdown
scfo/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scfo/web/chatapi/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
scfo/web/chatapi/src/: index.ts
scfo/web/front/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scfo/web/front/src/: main.tsx  vite-env.d.ts
scfo/web/front/src/components/App/: App.module.scss  App.tsx
scfo/web/front/src/components/Message/: Message.module.scss  Message.tsx
scfo/web/front/src/components/TypingMessage/: TypingMessage.module.scss  TypingMessage.tsx
